--- a/rpch-node/templates/hpa.yaml
+++ b/rpch-node/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "exit-node.fullname" . }}
+  name: {{ include "rpch-node.fullname" . }}
   labels:
-    {{- include "exit-node.labels" . | nindent 4 }}
+    {{- include "rpch-node.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "exit-node.fullname" . }}
+    name: {{ include "rpch-node.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
