--- a/rpch-node/templates/serviceaccount.yaml
+++ b/rpch-node/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "exit-node.serviceAccountName" . }}
+  name: {{ include "rpch-node.serviceAccountName" . }}
   labels:
-    {{- include "exit-node.labels" . | nindent 4 }}
+    {{- include "rpch-node.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
