--- a/rpch-node/templates/tests/test-connection.yaml
+++ b/rpch-node/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "rpc-server.fullname" . }}-test-connection"
+  name: "{{ include "rpch-node.fullname" . }}-test-connection"
   labels:
-    {{- include "rpc-server.labels" . | nindent 4 }}
+    {{- include "rpch-node.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "rpc-server.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "rpch-node.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
