--- a/exit-node/templates/service.yaml
+++ b/exit-node/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "rpch-node.fullname" . }}
+  name: {{ include "exit-node.fullname" . }}
   labels:
-    {{- include "rpch-node.labels" . | nindent 4 }}
+    {{- include "exit-node.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "rpch-node.selectorLabels" . | nindent 4 }}
+    {{- include "exit-node.selectorLabels" . | nindent 4 }}
